--- a/index.html
+++ b/index.html
@@ -290,7 +290,28 @@
         </div>
       </div>
     </main>
-
+    <footer>
+      <form action="#" method="post">
+        <label for="">Contact me</label>
+        <p>
+          If you have an application you are interested in developing, a feauture
+          that you need built or a project that needs coding. I'd love to help you 
+          with it.
+        </p>
+        <div>
+          <input type="text" placeholder="Your name" maxlength="30" required>
+        </div>
+        <div>
+          <input type="email" placeholder="Your email" required>
+        </div>
+        <div>
+          <textarea name="message" maxlength="500" id="" cols="30" rows="10" placeholder="Write your message here" required></textarea>
+        </div>
+        <div>
+          <button type="submit">Get in Touch</button>
+        </div>
+      </form>
+    </footer>
     <script
       src="https://kit.fontawesome.com/e966a3bd22.js"
       crossorigin="anonymous"
